[package]
name = "neat-rust"
version = "0.1.0"
edition = "2021"
description = "Generic Rust NEAT engine and INI/model export compatibility layer."
license = "MIT"

[[bin]]
name = "neat-rust-inspect"
path = "src/main.rs"

[dependencies]
json = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
