[package]
name = "neat-rust"
version = "0.1.0"
edition = "2021"
description = "Generic Rust NEAT engine with TOML config parsing, checkpointing, and model export."
license = "MIT"

[[bin]]
name = "neat-rust-inspect"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
